final (hopefully) commit

--- a/tex_files/acknowledgement.tex
+++ b/tex_files/acknowledgement.tex
@@ -1,7 +1,11 @@
 % !TEX root = ../my-thesis.tex
 %
-\pdfbookmark[0]{Acknowledgement}{Acknowledgement}
+\pdfbookmark[0]{Acknowledgements}{Acknowledgements}
 \addchap*{Acknowledgement}
 \label{sec:acknowledgement}
-
-\Blindtext[2][2]
+First of all, I would like to express my sincere thanks and gratitude to my supervisor Sigrunn Holbek Sørbye. I am very grateful for all the time and effort you put into this thesis to steer it in the right direction, especially when it came to the structure of this thesis. I think I'm about 70\% happy with it now, although .... kidding. \\ \\
+Next, I would like to thank LMU Munich and the University of Tromsø for enabling me to go on a student exchange here in Tromsø, an experience I thoroughly enjoyed.
+\\ \\
+To my good friend Alain, thank you for introducing me to several new cultures over the past few years, especially Indian culture of course (Sitar et al., 2019). 
+\\ \\
+Last but not least, thanks to 50 Cent for all the coffee calls over the last year or so. Here's your thanks. Now it has christed itself out, you big donkey.
