--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -1,6 +1,6 @@
 @article{rue2009approximate,
 	title        = {Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations},
-	author       = {Rue, H{\aa}vard and Martino, Sara and Chopin, Nicolas},
+	author       = {Martino, Sara and Chopin, Nicolas and Rue, H{\aa}vard},
 	year         = 2009,
 	journal      = {Journal of the royal statistical society: Series b (statistical methodology)},
 	publisher    = {Wiley Online Library},
@@ -53,7 +53,7 @@
 }
 @book{rue2005gaussian,
 	title        = {Gaussian Markov random fields: theory and applications},
-	author       = {Rue, Havard and Held, Leonhard},
+	author       = {Rue, H{\aa}vard and Held, Leonhard},
 	year         = 2005,
 	publisher    = {CRC press}
 }
@@ -561,14 +561,12 @@
 	url          = {https://www.jstatsoft.org/v64/i04/}
 }
 @article{rinla,
-	title        = {Spatial Data Analysis with {R}-{INLA} with Some Extensions},
-	author       = {Roger S. Bivand and Virgilio G\'omez-Rubio and H{\aa}vard Rue},
-	year         = 2015,
-	journal      = {Journal of Statistical Software},
-	volume       = 63,
-	number       = 20,
-	pages        = {1--31},
-	url          = {http://www.jstatsoft.org/v63/i20/}
+	title        = {Approximate {Bayesian} Inference for Latent {Gaussian} Models Using Integrated Nested {Laplace} Approximations (with discussion).},
+	author       = {H{\aa}vard Rue and Sara Martino and Nicholas Chopin},
+	year         = 2009,
+	journal      = {Journal of the Royal Statistical Society B},
+	volume       = 71,
+	pages        = {319--392}
 }
 @article{inlautils,
 	title        = {Evaluating Bayesian spatial methods for modelling species distributions with clumped and restricted occurrence data},
@@ -1701,4 +1699,56 @@
 	year         = 2021,
 	url          = {https://CRAN.R-project.org/package=waiter},
 	note         = {R package version 0.2.1}
+}
+@book{jaynes2003probability,
+	title        = {Probability theory: The logic of science},
+	author       = {Jaynes, Edwin T},
+	year         = 2003,
+	publisher    = {Cambridge university press}
+}
+@incollection{ghaderinezhad2019impact,
+	title        = {On the Impact of the Choice of the Prior in Bayesian Statistics},
+	author       = {Ghaderinezhad, Fatemeh and Ley, Christophe},
+	year         = 2019,
+	booktitle    = {Bayesian Inference on Complicated Data},
+	publisher    = {IntechOpen}
+}
+@article{rue2017bayesian,
+	title        = {Bayesian computing with INLA: a review},
+	author       = {Simpson, Daniel P and Riebler, Andrea and S{\o}rbye, Sigrunn H and Illian, Janine B and Lindgren, Finn K and Rue, H{\aa}vard},
+	year         = 2017,
+	journal      = {Annual Review of Statistics and Its Application},
+	publisher    = {Annual Reviews},
+	volume       = 4,
+	pages        = {395--421}
+}
+@article{willmott2005advantages,
+	title        = {Advantages of the mean absolute error (MAE) over the root mean square error (RMSE) in assessing average model performance},
+	author       = {Willmott, Cort J and Matsuura, Kenji},
+	year         = 2005,
+	journal      = {Climate research},
+	volume       = 30,
+	number       = 1,
+	pages        = {79--82}
+}
+@article{rioux_grandbastien_astagneau_2006,
+	title        = {The Standardized Incidence Ratio as a Reliable Tool for Surgical Site Infection Surveillance},
+	author       = {Rioux, Christophe and Grandbastien, Bruno and Astagneau, Pascal},
+	year         = 2006,
+	journal      = {Infection Control \& Hospital Epidemiology},
+	publisher    = {Cambridge University Press},
+	volume       = 27,
+	number       = 8,
+	pages        = {817–824},
+	doi          = {10.1086/506420}
+}
+
+@article{lee2018spatio,
+  title={Spatio-temporal areal unit modelling in R with conditional autoregressive priors using the CARBayesST package},
+  author={Lee, Duncan and Rushworth, Alastair and Napier, Gary},
+  journal={Journal of Statistical Software},
+  volume={84},
+  number={9},
+  year={2018},
+  publisher={Foundation for Open Access Statistics}
 }
