--- a/tex_files/chapter-conclusion.tex
+++ b/tex_files/chapter-conclusion.tex
@@ -1,9 +1,9 @@
 % !TEX root = ../my-thesis.tex
 %
 \chapter{Conclusion}\label{sec:conclussion}
-The aim of this work was to identify factors that have a significant impact on the current Covid-19 infection numbers in Germany and Norway using both a Bayesian approach that takes into account the spatial neighbourhood structure of each country and a non-Bayesian machine learning approach, and to compare these approaches to see which one proves more useful for this type of analysis. Another goal was to determine factors influencing infection numbers over time, namely government actions in response to the pandemic, changes in population mobility patterns, and the prevalence of different strains of Covid-19. \\
+The aim of this work was to identify factors that have a significant influence on the current Covid-19 infection figures in Germany and Norway. A Bayesian approach was used that takes into account the spatial neighbourhood structure of the individual countries. In addition, a non-parametric machine learning approach was chosen with the aim of comparing these approaches to see which one proves more useful for this type of analysis. Another goal was to determine factors influencing infection numbers over time, namely government actions in response to the pandemic, changes in population mobility patterns, and the prevalence of different strains of Covid-19. \\
 Based on the analysis of the differences between the spatial Bayesian and the non-Bayesian models for which no temporal effect is used, it can be concluded that the use of the Bayesian model with inclusion of a spatial term showed superior performance in terms of the mean absolute error, both in training and in testing. This was observed for Germany and for Norway. \\
-For Germany, the factors that have a significant impact on the prevalence of Covid-19 are population density, the percentage of votes for the right-wing party AfD and the logarithmic trade tax. All three factors had a positive effect on the predicted infection rates, with current research clearly supporting the link between population density and infection rates, as well as the link between right-wing parties and the tendency for people who support these parties to be at higher risk of infection due to not following Covid-19 guidelines. On the other hand, recent research suggests that people living in higher income or richer regions have a lower risk of infection, while the opposite is suggested by the model calculated for Germany. \\
+For Germany, the factors that have a significant impact on the prevalence of Covid-19 are population density, the percentage of votes for the right-wing party AfD and the logarithmic trade tax. All three factors had a positive effect on the predicted infection rates, with current research clearly supporting the link between population density and infection rates, as well as the link between right-wing parties and the tendency for people who support these parties to be at higher risk of infection due to not following Covid-19 guidelines. On the other hand, recent research suggests that people living in higher income or richer regions have a lower risk of infection, while the opposite is suggested by the model fiited for Germany. \\
 For Norway, these factors are urban density, the number of unemployed immigrants in a municipality, the total number of immigrants in a municipality and the proportion of women. The proportion of women is the only effect where a negative influence on the predicted infection numbers is observed. However, this association is not supported by current research which suggests that men and women are equally likely to contract Covid-19. No research has yet been conducted to analyse the association between unemployed immigrants and the risk of Covid-19, which makes it difficult to evaluate this effect as there is no research to compare it to. The association between immigrants in Norway and the risk of infection with Covid-19, as well as the association between the risk of infection and urban density, is consistent with current research which suggests that immigrants in Norway have a higher risk of infection and that higher density in urban areas leads to a higher risk of infection. \\
 Temporal modelling proved more difficult, with no distribution fitting the data reasonably well for Germany or Norway. A small test size limited the interpretation of the results. For both countries, the only significant effect on infection rates found was mobility in workplaces with a higher workplace mobility leading to a higher risk of infection. This is in line with current research. \\
 Based on these conclusions, people living in areas with characteristics such as a higher proportion of people voting for right-wing parties or a higher population or urban density should be cautious in their daily lives and keep a safe distance from other people to limit their risk of contracting Covid-19. \\
