--- a/tex_files/my-thesis-setup.tex
+++ b/tex_files/my-thesis-setup.tex
@@ -11,7 +11,7 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{Modelling of Viral Disease Spread}
+\newcommand{\thesisTitle}{Modelling of Viral Disease Risk}
 \newcommand{\thesisName}{Nico Hahn}
 \newcommand{\thesisSubject}{Documentation}
 \newcommand{\thesisDate}{June 21, 2021}
@@ -47,7 +47,7 @@
     configurebiblatex=true,%
     bibsys=biber,%
     bibfile=bib-refs,%
-    bibstyle=apa,%
+    bibstyle=bwl-FU,%
     bibsorting=nty,%
 }{cleanthesis}
 \usepackage{cleanthesis}
